<resources>
    <string name="app_name">Registration App</string>
    <string name="enter_the_email">Enter the Email</string>
    <string name="activity_main_password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_register">Already Register..LogIn</string>
    <string name="login">Login</string>
    <string name="profile_activity">Profile Activity</string>
    <string name="log_out">Log Out</string>
    <string name="new_user_signup">New User...SignUp</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="enter_the_event_name">Enter the event name</string>
    <string name="submit">Submit</string>
</resources>
